[TASK] add some image scaling

--- a/Resources/Private/Templates/Default/Product/List.html
+++ b/Resources/Private/Templates/Default/Product/List.html
@@ -29,7 +29,8 @@
                                         <f:image src="{product.firstImage.originalResource.originalFile.uid}"
                                                  title="{product.firstImage.originalResource.title}"
                                                  alt="{product.firstImage.originalResource.title}"
-                                                 width="100" />
+                                                 width="{settings.listAction.media.image.size.small.maxWidth}"
+                                                 height="{settings.listAction.media.image.size.small.maxHeight}" />
                                     </f:if>
                                 </f:link.action>
                             </td>
@@ -46,7 +47,8 @@
                                         <f:image src="{product.firstImage.originalResource.originalFile.uid}"
                                                  title="{product.firstImage.originalResource.title}"
                                                  alt="{product.firstImage.originalResource.title}"
-                                                 width="100" />
+                                                 width="{settings.listAction.media.image.size.small.maxWidth}"
+                                                 height="{settings.listAction.media.image.size.small.maxHeight}" />
                                     </f:if>
                                 </f:link.action>
                             </td>
