--- a/Resources/Private/Backend/Templates/Order/Statistic.html
+++ b/Resources/Private/Backend/Templates/Order/Statistic.html
@@ -8,7 +8,7 @@
 <f:section name="content">
     <f:flashMessages/>
 
-    <f:render partial="Order/Filter/Statistic" arguments="{piVars: piVars, action: 'statistic'}"/>
+    <f:render partial="Order/Filter/Statistic" arguments="{searchArguments: searchArguments, action: 'statistic'}"/>
 
     <div class="clear"></div>
 
