--- a/Resources/Private/Backend/Templates/VariantSet/List.html
+++ b/Resources/Private/Backend/Templates/VariantSet/List.html
@@ -9,7 +9,7 @@
     </div>
     <div class="clear"><!-- &nbsp --></div>
 
-    <f:render partial="BeVariantAttribute/Filter" arguments="{piVars: piVars, action: 'list'}"/>
+    <f:render partial="BeVariantAttribute/Filter" arguments="{arguments: arguments, action: 'list'}"/>
 
     <div class="table-fit">
         <table class="table table-striped typo3-dblist">
