--- a/Resources/Private/Backend/Partials/Order/Filter/List.html
+++ b/Resources/Private/Backend/Partials/Order/Filter/List.html
@@ -1,13 +1,13 @@
 <div class="tx_cart_module_products_filter">
     <div class="tx_cart_module_products_filter_inner">
 
-        <f:form action="{action}" name="filter" id="module_cartorders_search_form">
+        <f:form action="{action}" name="search" id="module_cartorders_search_form">
             <div>
                 <label for="searchCustomer">
                     <f:translate key="filterCustomer"/>
                 </label>
                 <f:form.textfield property="customer" id="searchCustomer"
-                                  class="cart_module_search_field_string" value="{piVars.filter.customer}"/>
+                                  class="cart_module_search_field_string" value="{searchArguments.customer}"/>
             </div><br />
 
             <div class="col-50">
@@ -16,7 +16,7 @@
                         <f:translate key="filterOrderNumber"/>
                     </label>
                     <f:form.textfield property="orderNumber" id="searchOrderNumber"
-                                      class="cart_module_search_field_string" value="{piVars.filter.orderNumber}"/>
+                                      class="cart_module_search_field_string" value="{searchArguments.orderNumber}"/>
                 </div>
                 <div>
                     <label for="searchOrderDateStart">
@@ -24,7 +24,7 @@
                     </label>
                     <f:form.textfield property="orderDateStart" id="searchOrderDateStart"
                                       class="cart_module_search_field_start cart_date"
-                                      value="{piVars.filter.orderDateStart}"
+                                      value="{searchArguments.orderDateStart}"
                                       type="date" />
                 </div>
                 <div>
@@ -33,7 +33,7 @@
                     </label>
                     <f:form.textfield property="orderDateEnd" id="searchOrderDateEnd"
                                       class="cart_module_search_field_end cart_date"
-                                      value="{piVars.filter.orderDateEnd}"
+                                      value="{searchArguments.orderDateEnd}"
                                       type="date" />
                 </div>
             </div>
@@ -44,7 +44,7 @@
                     </label>
                     <f:form.textfield property="invoiceNumber" id="searchInvoiceNumber"
                                       class="cart_module_search_field_string"
-                                      value="{piVars.filter.inoviceNumber}"/>
+                                      value="{searchArguments.inoviceNumber}"/>
                 </div>
                 <div>
                     <label for="searchInvoiceDateStart">
@@ -52,7 +52,7 @@
                     </label>
                     <f:form.textfield property="invoiceDateStart" id="searchInvoiceDateStart"
                                       class="cart_module_search_field_start cart_date"
-                                      value="{piVars.filter.invoiceDateStart}"
+                                      value="{searchArguments.invoiceDateStart}"
                                       type="date" />
                 </div>
                 <div>
@@ -61,7 +61,7 @@
                     </label>
                     <f:form.textfield property="invoiceDateEnd" id="searchInvoiceDateEnd"
                                       class="cart_module_search_field_end cart_date"
-                                      value="{piVars.filter.invoiceDateEnd}"
+                                      value="{searchArguments.invoiceDateEnd}"
                                       type="date" />
                 </div>
             </div>
@@ -73,7 +73,7 @@
                     <f:translate key="tx_cart_domain_model_order_payment.status"/>
                 </label>
                 <f:form.select property="paymentStatus" options="{paymentStatus}" optionValueField="key"
-                               optionLabelField="value" value="{piVars.filter.paymentStatus}"/>
+                               optionLabelField="value" value="{searchArguments.paymentStatus}"/>
             </div>
             <div class="col-50">
                 <label for="searchShippingStatus">
@@ -81,7 +81,7 @@
                     <f:translate key="tx_cart_domain_model_order_shipping.status"/>
                 </label>
                 <f:form.select property="shippingStatus" options="{shippingStatus}" optionValueField="key"
-                               optionLabelField="value" value="{piVars.filter.paymentStatus}"/>
+                               optionLabelField="value" value="{searchArguments.paymentStatus}"/>
             </div>
             <div class="clear">&nbsp;</div><br />
 
