--- a/Resources/Private/Backend/Partials/Order/Filter/Statistic.html
+++ b/Resources/Private/Backend/Partials/Order/Filter/Statistic.html
@@ -1,7 +1,7 @@
 <div class="tx_cart_module_products_filter">
     <div class="tx_cart_module_products_filter_inner">
 
-        <f:form action="{action}" name="filter" id="module_cartorders_search_form">
+        <f:form action="{action}" name="search" id="module_cartorders_search_form">
             <div class="col-50" style="display:block;float:left;">
                 <div>
                     <label for="searchOrderDateStart">
@@ -9,7 +9,7 @@
                     </label>
                     <f:form.textfield property="orderDateStart" id="searchOrderDateStart"
                                       class="cart_module_search_field_start cart_date"
-                                      value="{piVars.filter.orderDateStart}"
+                                      value="{searchArguments.orderDateStart}"
                                       type="date" />
                 </div>
                 <div>
@@ -18,7 +18,7 @@
                     </label>
                     <f:form.textfield property="orderDateEnd" id="searchOrderDateEnd"
                                       class="cart_module_search_field_end cart_date"
-                                      value="{piVars.filter.orderDateEnd}"
+                                      value="{searchArguments.orderDateEnd}"
                                       type="date" />
                 </div>
             </div>
@@ -29,7 +29,7 @@
                     </label>
                     <f:form.textfield property="invoiceDateStart" id="searchInvoiceDateStart"
                                       class="cart_module_search_field_start cart_date"
-                                      value="{piVars.filter.invoiceDateStart}"
+                                      value="{searchArguments.invoiceDateStart}"
                                       type="date" />
                 </div>
                 <div>
@@ -38,7 +38,7 @@
                     </label>
                     <f:form.textfield property="invoiceDateEnd" id="searchInvoiceDateEnd"
                                       class="cart_module_search_field_end cart_date"
-                                      value="{piVars.filter.invoiceDateEnd}"
+                                      value="{searchArguments.invoiceDateEnd}"
                                       type="date" />
                 </div>
             </div>
