--- a/Resources/Private/Partials/Default/Cart/Mail/ProductWithVariant.html
+++ b/Resources/Private/Partials/Default/Cart/Mail/ProductWithVariant.html
@@ -42,9 +42,6 @@
     <td style="text-align: right;">
         &nbsp;
     </td>
-    <td style="text-align: right;">
-        &nbsp;
-    </td>
     <td class="last">
         &nbsp;
     </td>
@@ -64,10 +61,7 @@
     <td style="text-align: right;">
         {product.quantity}
     </td>
-    <td style="text-align: right;">
+    <td class="last" style="text-align: right;">
         <cart:format.currency>{product.gross}</cart:format.currency>
-    </td>
-    <td class="last">
-        &nbsp;
     </td>
 </tr>
