[TASK] change color in default mails

--- a/Resources/Private/Templates/Default/Order/Mail/Open/Buyer.html
+++ b/Resources/Private/Templates/Default/Order/Mail/Open/Buyer.html
@@ -5,13 +5,13 @@
         <b><f:translate key="tx_cart.mail.thank_you_for_order" /></b>
     </p>
 
-    <p style="background-color:#0098dd;color:#fff;padding:3px;">
+    <p style="background-color:#3b7eb0;color:#fff;padding:3px;">
         <b><f:translate key="tx_cart.mail.order_information" />:</b>
     </p>
 
     <f:render partial="Cart/Mail/Address" arguments="{billingAddress: billingAddress, shippingAddress: shippingAddress}"/>
 
-    <p style="background-color:#0098dd;color:#fff;padding:3px;">
+    <p style="background-color:#3b7eb0;color:#fff;padding:3px;">
         <b><f:translate key="tx_cart.mail.order_summary" />:</b>
     </p>
 
