--- a/Resources/Private/Templates/Default/Order/Mail/Open/Seller.html
+++ b/Resources/Private/Templates/Default/Order/Mail/Open/Seller.html
@@ -1,13 +1,13 @@
 <f:layout name="Mail"/>
 
 <f:section name="main">
-    <p style="background-color:#0098dd;color:#fff;padding:3px;">
+    <p style="background-color:#3b7eb0;color:#fff;padding:3px;">
         <b><f:translate key="tx_cart.mail.order_information" />:</b>
     </p>
 
     <f:render partial="Cart/Mail/Address" arguments="{billingAddress: billingAddress, shippingAddress: shippingAddress}"/>
 
-    <p style="background-color:#0098dd;color:#fff;padding:3px;">
+    <p style="background-color:#3b7eb0;color:#fff;padding:3px;">
         <b><f:translate key="tx_cart.mail.order_summary" />:</b>
     </p>
 
