--- a/Resources/Private/Partials/Default/Mail/Cart.html
+++ b/Resources/Private/Partials/Default/Mail/Cart.html
@@ -24,7 +24,7 @@
     </tr>
     </thead>
     <tbody>
-        <f:render partial="Cart/Mail/ProductList" arguments="{products: cart.products}"/>
-        <f:render partial="Cart/Mail/Summary" arguments="{cart: cart}"/>
+        <f:render partial="Mail/ProductList" arguments="{products: cart.products}"/>
+        <f:render partial="Mail/Summary" arguments="{cart: cart}"/>
     </tbody>
 </table>
