--- a/Resources/Private/Partials/Default/Mail/Summary.html
+++ b/Resources/Private/Partials/Default/Mail/Summary.html
@@ -23,7 +23,7 @@
     </td>
 </tr>
 
-<f:render partial="Cart/Mail/TaxList" arguments="{taxes: cart.taxes}"/>
+<f:render partial="Mail/TaxList" arguments="{taxes: cart.taxes}"/>
 
 <tr>
     <td colspan="4" style="text-align: right;">
@@ -48,7 +48,7 @@
     </td>
 </tr>
 
-<f:render partial="Cart/Mail/TaxList" arguments="{taxes: cart.serviceTaxes}"/>
+<f:render partial="Mail/TaxList" arguments="{taxes: cart.serviceTaxes}"/>
 
 <tr>
     <td colspan="4" style="text-align: right;">
@@ -73,4 +73,4 @@
     </td>
 </tr>
 
-<f:render partial="Cart/Mail/TaxList" arguments="{taxes: cart.totalTaxes}"/>
+<f:render partial="Mail/TaxList" arguments="{taxes: cart.totalTaxes}"/>
