--- a/Resources/Private/Partials/Default/Mail/Address.html
+++ b/Resources/Private/Partials/Default/Mail/Address.html
@@ -5,7 +5,7 @@
             <f:if condition="{billingAddress.company}">
                 {billingAddress.company}<br /><br />
             </f:if>
-            {billingAddress.fullName}<br />
+            {billingAddress.salutationTitleFullName}<br />
             {billingAddress.street}<br />
             {billingAddress.zip} {billingAddress.city}<br />
             <f:if condition="{billingAddress.country}">
@@ -19,7 +19,7 @@
                     <f:if condition="{shippingAddress.company}">
                         {shippingAddress.company}<br /><br />
                     </f:if>
-                    {shippingAddress.fullName}<br />
+                    {shippingAddress.salutationTitleFullName}<br />
                     {shippingAddress.street}<br />
                     {shippingAddress.zip} {shippingAddress.city}<br />
                     <f:if condition="{shippingAddress.country}">
