--- a/Resources/Private/Templates/Default/Mail/Paid/Buyer.html
+++ b/Resources/Private/Templates/Default/Mail/Paid/Buyer.html
@@ -2,7 +2,7 @@
 
 <f:section name="main">
     <p>
-        <f:translate key="tx_cart.mail.salutation" arguments="{0: billingAddress.titleLastName}"/>
+        <f:translate key="tx_cart.mail.salutation" arguments="{0: billingAddress.salutationOrTitleLastName}"/>
     </p>
 
     <f:cObject typoscriptObjectPath="lib.cartMailHeader" />
